--- a/doc/li110830.bib
+++ b/doc/li110830.bib
@@ -11051,7 +11051,7 @@ year=1974}
    author    = {J.~Jensen and A.~R.~Mackintosh},
    title     = {Rare Earth Magnetism},
    year      = {1991},
-   publisher = {Clarendon Press Oxford}
+   publisher = {Clarendon Press Oxford, http://www.nbi.ku.dk/page40667.htm}
 }
 
 
