--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -259,8 +259,8 @@ This section is describes the formalism used in the calculation of the magnetic 
 procedure is not standard, we list the most important formulas.
 
 The double differential
-inelastic neutron cross section of magnetic excitations has been given in~\cite{jensen91-1}~\footnote{\em %%@
-http://www.nbi.ku.dk/page40667.htm} (compare also equations (\ref{dsdode}) and (\ref{smag}))
+inelastic neutron cross section of magnetic excitations has been given in~\cite{jensen91-1}
+ (compare also equations (\ref{dsdode}) and (\ref{smag}))
 
 \begin{eqnarray}\label{int}
 \frac{d \sigma_{\rm mag}^{\rm inel}}{d\Omega dE'}&=&N \frac{k'}{k} \left(\frac{\hbar \gamma e^2}{m_e c^2}\right)^2
@@ -720,7 +720,7 @@ yields the final result for the dynamical susceptibility:
 
 \begin{equation}\label{dmdfinal}
 \chi^{,,ss'}_{\alpha\beta}(\mbf Q,\omega)=\sqrt{\gamma^s}^\star\pi \sum_r 
-\mathcal U^s_{\alpha1} \mathcal T_{sr}(\mbf Q) \omega_r(\mbf Q)\delta(\hbar \omega_r(\mbf Q) %%@
+\mathcal U^s_{\alpha1} \mathcal T_{sr}(\mbf Q) \hbar\omega_r(\mbf Q)\delta(\hbar \omega_r(\mbf Q) %%@
 - \hbar \omega) \mathcal T^{\dag}_{rs'}(\mbf Q) \mathcal U^{s'\dag}_{1\beta}\sqrt{\gamma^{s'}} 
 \end{equation}
 
