--- a/doc/q_int.tex
+++ b/doc/q_int.tex
@@ -14,7 +14,7 @@ can be described by products of Stevens operators. The general two ion exchange 
 \end{equation}
 
 For further information on the notation and symmetry restrictions to the
-parameters in the Hamiltonian refer to~\cite{jensen91-1}~\footnote{\em http://www.nbi.ku.dk/page40667.htm}.
+parameters in the Hamiltonian refer to~\cite{jensen91-1}.
 
 
 \subsection{Setting up {\prg mcphas.j\index{mcphas.j}} and other input files}
