--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -255,10 +255,10 @@ If {\prg diagonalexchange}
 The Land'e factor of the ion (gJ) and the file name of the corresponding single ion
 parameter file (cffilename).
 \item [Line 9a:]  If {\prg diagonalexchange=2}, then this line gives the indices of the exchange tensor corresponding to 
- the columns 4 onwards. It must have a variable called {\prg indexexchange} followed by a list of pairs of exchange 
- constants separated by space. E.g. \verb|  #! indexexchange= JaJb JbJc  | means column 4 gives the the exchange between the
+ the columns 4 onwards. It must have a variable called {\prg indexexchange} followed by a list of names of components of the interaction
+ tensor separated by space. E.g. \verb|  #! indexexchange= JaJb JbJc  | means column 4 gives the the interaction constant between the
  first angular momentum component of the current ion with the second angular momentum component of its neighbour, whilst 
- column 5 has the correlations between the second angular momentum component of this ion with the third component of its
+ column 5 has the interaction constant between the second angular momentum component of this ion with the third component of its
  neighbour. Alternatively, pairs of numbers may be given, as in \verb|  #! indexexchange= 1,2 2,3  |
  Additionally another parameter {\prg symmetricexchange} can be set to 1, where the value in each column is also used 
  for the transposed tensor component. Thus \verb|  #! symmetricexchange=1 indexexchange= JaJb  | is the same as \\
@@ -319,9 +319,116 @@ transform {\prg mcphas.coq} to {\prg mcphas.jjj} format
 
 \subsubsection{Example {\prg mcphas.j\index{mcphas.j}} file for a simple antiferromagnet}
 
-Here is an example file of a tetragonal antiferromagnet with nearest neighbour interactions:
+Here are example files of a tetragonal antiferromagnet with nearest neighbour interactions, all
+files are equivalent:
 
-\input{mcphas.j}
+{\small
+\begin{verbatim} 
+# simple antiferromagnet 
+#<!--mcphase.mcphas.j-->
+#***************************************************************
+# Lattice Constants (A)
+#! a=4.3843 b=4.3843 c=2.4194 alpha=  90 beta=  90 gamma=  90
+#! r1a=   1 r2a=   0 r3a=   0
+#! r1b=   0 r2b=   1 r3b=   0   primitive lattice vectors [a][b][c]
+#! r1c=   0 r2c=   0 r3c=   1
+#! nofatoms=1  nofcomponents=3  number of atoms in primitive unit cell/number of components of each spin
+# ****************************************************************************
+#! da=  0 [a] db=  0 [b] dc=  0 nofneighbours=2 diagonalexchange=0 gJ=0.857143 cffilename=Ce3p.sipf
+# da[a] db[b] dc[c] Jaa[meV] Jbb[meV] Jcc[meV] Jab[meV] Jba[meV] Jac[meV] Jca[meV] Jbc[meV] Jcb[meV]
++0	+0	+1	-0.1	-0.1	-0.1   0  0  0  0  0  0
++0	+0	-1	-0.1	-0.1	-0.1   0  0  0  0  0  0
+#\end{verbatim}
+}
+
+Using diagonalexchange this may be shortened to
+
+{\small
+\begin{verbatim} 
+# simple antiferromagnet 
+#<!--mcphase.mcphas.j-->
+#***************************************************************
+# Lattice Constants (A)
+#! a=4.3843 b=4.3843 c=2.4194 alpha=  90 beta=  90 gamma=  90
+#! r1a=   1 r2a=   0 r3a=   0
+#! r1b=   0 r2b=   1 r3b=   0   primitive lattice vectors [a][b][c]
+#! r1c=   0 r2c=   0 r3c=   1
+#! nofatoms=1  nofcomponents=3  number of atoms in primitive unit cell/number of components of each spin
+# ****************************************************************************
+#! da=  0 [a] db=  0 [b] dc=  0 nofneighbours=2 diagonalexchange=1 gJ=0.857143 cffilename=Ce3p.sipf
+# da[a] db[b] dc[c] Jaa[meV] Jbb[meV] Jcc[meV] Jab[meV] Jba[meV] Jac[meV] Jca[meV] Jbc[meV] Jcb[meV]
++0	+0	+1	-0.1	-0.1	-0.1   
++0	+0	-1	-0.1	-0.1	-0.1   
+#\end{verbatim}
+}
+
+with indexexchange option the sequence of two ion interaction parameters can be changed and
+zero parameters may be omitted:
+
+{\small
+\begin{verbatim} 
+# simple antiferromagnet 
+#<!--mcphase.mcphas.j-->
+#***************************************************************
+# Lattice Constants (A)
+#! a=4.3843 b=4.3843 c=2.4194 alpha=  90 beta=  90 gamma=  90
+#! r1a=   1 r2a=   0 r3a=   0
+#! r1b=   0 r2b=   1 r3b=   0   primitive lattice vectors [a][b][c]
+#! r1c=   0 r2c=   0 r3c=   1
+#! nofatoms=1  nofcomponents=3  number of atoms in primitive unit cell/number of components of each spin
+# ****************************************************************************
+#! da=  0 [a] db=  0 [b] dc=  0 nofneighbours=2 diagonalexchange=2 gJ=0.857143 cffilename=Ce3p.sipf
+# da[a] db[b] dc[c] Jaa[meV] Jbb[meV] Jcc[meV] Jab[meV] Jba[meV] Jac[meV] Jca[meV] Jbc[meV] Jcb[meV]
+#! indexexchange = JaJa JaJc JcJa JbJb JcJc
++0	+0	+1	-0.1 0 0 -0.1	-0.1  
++0	+0	-1	-0.1 0 0 -0.1	-0.1  
+#\end{verbatim}
+}
+
+{\small
+\begin{verbatim} 
+# simple antiferromagnet 
+#<!--mcphase.mcphas.j-->
+#***************************************************************
+# Lattice Constants (A)
+#! a=4.3843 b=4.3843 c=2.4194 alpha=  90 beta=  90 gamma=  90
+#! r1a=   1 r2a=   0 r3a=   0
+#! r1b=   0 r2b=   1 r3b=   0   primitive lattice vectors [a][b][c]
+#! r1c=   0 r2c=   0 r3c=   1
+#! nofatoms=1  nofcomponents=3  number of atoms in primitive unit cell/number of components of each spin
+# ****************************************************************************
+#! da=  0 [a] db=  0 [b] dc=  0 nofneighbours=2 diagonalexchange=2 gJ=0.857143 cffilename=Ce3p.sipf
+# da[a] db[b] dc[c] Jaa[meV] Jbb[meV] Jcc[meV] Jab[meV] Jba[meV] Jac[meV] Jca[meV] Jbc[meV] Jcb[meV]
+#! indexexchange = 1,1 1,3, 3,1 2,2 3,3
++0	+0	+1	-0.1 0 0 -0.1	-0.1  
++0	+0	-1	-0.1 0 0 -0.1	-0.1  
+#\end{verbatim}
+}
+
+
+using symmetricexchange together with indexexchange will assume that the interaction tensor is symmetic and 
+only half of it may be given:
+
+{\small
+\begin{verbatim} 
+# simple antiferromagnet 
+#<!--mcphase.mcphas.j-->
+#***************************************************************
+# Lattice Constants (A)
+#! a=4.3843 b=4.3843 c=2.4194 alpha=  90 beta=  90 gamma=  90
+#! r1a=   1 r2a=   0 r3a=   0
+#! r1b=   0 r2b=   1 r3b=   0   primitive lattice vectors [a][b][c]
+#! r1c=   0 r2c=   0 r3c=   1
+#! nofatoms=1  nofcomponents=3  number of atoms in primitive unit cell/number of components of each spin
+# ****************************************************************************
+#! da=  0 [a] db=  0 [b] dc=  0 nofneighbours=2 diagonalexchange=2 gJ=0.857143 cffilename=Ce3p.sipf
+# da[a] db[b] dc[c] Jaa[meV] Jbb[meV] Jcc[meV] Jab[meV] Jba[meV] Jac[meV] Jca[meV] Jbc[meV] Jcb[meV]
+#! symmetricexchange=1 indexexchange = JaJa JaJc JbJb JcJc
++0	+0	+1	-0.1 0  -0.1	-0.1  
++0	+0	-1	-0.1 0  -0.1	-0.1  
+#\end{verbatim}
+}
+
 
 \subsubsection{Single Ion Property Input Files}\label{sifile}
 
