program displayerr created

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -424,6 +424,10 @@ graphical
 display\index{display} of a 3 dimensional dataset as a colour and/or contour plot. Here '5 6 8' 
 denote the x,y and z column in file {\prg ./results/mcdisp.dsigma.tot}, which should
 be plotted. Figure~\ref{diffus} shows an sample output of this program.
+\item [\prg displayerr\index{displayerr} colx coly colerr filename:]  program displayerr - show and watch data file by viewing a xy graphic on screen.     
+        xcol,ycol,intcol ... column to be taken as x-, y- and yerrorbar axis.
+            if intcol=- then lines are shown (no symbols and no errorbars)
+        filename ..... filename of datafile.
 \item [\prg displaytext\index{displaytext} ./results/mcphas.hkl] monitors the file mcphas.hkl in %%@
 a text window
 on screen.
