--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -584,7 +584,7 @@ The format to be used is:
 {\footnotesize
 \begin{verbatim}
 extern "C" int du1calc(int & tn,double & T,Vector & gjmbH,double * g_J,Vector & MODPAR,
-char ** sipffilename,ComplexVector & u1,float & delta,ComplexVector & u1, ComplexMatrix & est)
+char ** sipffilename,ComplexVector & u1,float & delta, ComplexMatrix & est)
 \end{verbatim}
 
 The meaning of the symbols is as follows:
